# folark

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: ci.yml  docker-publish.yml
app/: config.py  database.py  main.py
app/api/: batch_jobs.py  documents.py  plugins.py  search.py  settings.py  tags.py
app/plugins/: __init__.py  core.py  manager.py
app/plugins/builtin_plugin/: __init__.py  archive_preview.html  audio_plugin.py  audio_preview.html  docx_plugin.py  docx_preview.html  epub_plugin.py  epub_preview.html  image_plugin.py  pdf_plugin.py  plugin.py  pptx_plugin.py  pptx_preview.html  text_plugin.py  text_preview.html  txt_plugin.py  utils.py  video_plugin.py  video_preview.html  xlsx_plugin.py  xlsx_preview.html  zip_plugin.py
app/services/: batch_jobs.py  documents.py  ingestion.py  search.py
app/templates/: base.html  import.html  index.html  login.html  preview_unsupported.html  settings.html
static/css/: app.css
static/js/: directory-import.js  document-app.js  document-detail.js  settings-app.js  store.js  upload.js  utils.js
